//const LoginService = require("./loginService.js");

class LoginController {
    //#service = new LoginService();
    onClickOnLoginLink() {

    }

    onClickOnLoginButton(serviceName) {
       // this.#service.login(serviceName);
    }
}