module.exports = class LoginService{
    constructor(socialLoginList) {
    }

    async login(serviceName){

    }

    async isConnectedToAny(){

    }

    async logoutFromAll(){

    }
}